--- a/main.css
+++ b/main.css
@@ -1,11 +1,38 @@
 div {
-  border: 20px solid #000; /* this is short hand for setting
-                            the border's width, its type, and color */
+  border: 20px solid #000; /* this is shorthand for setting the border's width, type, and color */
   display: inline-block; /* a way of positioning elements */
   min-width: 20em; /* the two min styles make the shape */
-  min-height: 25em; /* of the divs oblong*/
+  min-height: 25em; /* of the divs oblong */
   border-radius: 50%; /* this makes the normally square div round */
   border-left-color: transparent; /* these remove the color from the left side */
   border-right-color: transparent; /* the right side */
   border-bottom-color: transparent; /* and the bottom of the circle */
+}
+
+#red {
+  border-top-color: #f00; /* red */
+}
+
+#orange {
+  border-top-color: #ffa500; /* orange */
+}
+
+#yellow {
+  border-top-color: #ff0; /* yellow */
+}
+
+#green {
+  border-top-color: #00bc3f; /* green */
+}
+
+#blue {
+  border-top-color: #06f; /* blue */
+}
+
+#indigo {
+  border-top-color: #8a2be2; /* indigo */
+}
+
+#violet {
+  border-top-color: #d300c9; /* violet */
 }
